# MovieMandala

./: .env.example  .gitignore  README.md  about.html  index.html  login.html  main.py  pyproject.toml  result.html  signup.html
app/domain/: movie_features.py
app/services/ml/: catalog_builder.py  demo_catalog.py  preprocessing.py  tfidf_recommender.py  tmdb_client.py
artifacts/: movie_catalog.parquet  movie_index.joblib  tfidf_matrix.joblib  tfidf_vectorizer.joblib
backend/: app.py  database.py  models.py  movie_mandala.db
backend/app/: database.py  main.py  startup.py
backend/app/models/: movie.py  user.py
backend/app/routers/: auth.py
backend/app/schemas/: movie.py  user.py
backend/database/: schema.sql
css/: about.css  result.css  style.css
data/raw/: tmdb_catalog.parquet
database/: schema.sql
js/: app.js  result.js
notebooks/: 01_tmdb_ingestion.ipynb  02_preprocessing.ipynb  03_vectorization_similarity.ipynb  04_recommender_eval.ipynb  _project.py
