[project]
name = "movie-mandala"
version = "0.1.0"
description = "Movie Mandala is a FastAPI-based movie recommender web app."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.136.3",
    "httpx>=0.28.1",
    "ipykernel>=7.3.0",
    "ipywidgets>=8.1.8",
    "joblib>=1.5.3",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "pyarrow>=24.0.0",
    "python-dotenv>=1.2.2",
    "scikit-learn>=1.9.0",
    "scipy>=1.17.1",
    "sqlalchemy>=2.0.50",
    "tqdm>=4.68.2",
]
